Bug 21859 - setxkbmap -device doesn't work correctly
Summary: setxkbmap -device doesn't work correctly
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Input/XKB (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Daniel Stone
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-21 16:50 UTC by Peter Hutterer
Modified: 2009-09-16 17:05 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Peter Hutterer 2009-05-21 16:50:46 UTC
setxkbmap -device allows a per-device layout but that's a bit iffy right now.

Test-case with two keyboards, device IDs 10 and 20, both on default "us" layout:

1. type on keyboard 10
2. setxkbmap -layout de -device 10
3. type on keyboard 10, layout on 10 is still "us"
4. type on keyboard 20, layout on 20 is "us"
5. type on keyboard 10, layout is now "de", keyboard 20 is "us", all correct now

Affects master and 1.6. I guess it's because we don't send the mapping notify for the VCK until the lastSlave changes, and the one we send in response to the XkbGetKbdByName request is a per-device request, not XkbCoreKeyboard.
Comment 1 Peter Hutterer 2009-09-16 17:05:14 UTC
Fixed with commit 8af2793a90e8e644a6a598adce3f752c15b3e37a


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.